--- a/assets/pages/firstPage.html
+++ b/assets/pages/firstPage.html
@@ -157,8 +157,8 @@
             <h3>Formular</h3>
             <form id="formular">
 
-                <input type="text" name="navn" id="" placeholder="dit navn">
-                <input type="text" name="alder" id="" placeholder="din alder">
+                <input type="text" name="navn" id="personName" placeholder="dit navn">
+                <input type="text" name="alder" id="personAge" placeholder="din alder">
                 <button id="indsend-knap">Indsend</button>
 
 
